tests/fail/if_then_else_with_integer_return_value.tig
while 1 do if 1 then 1 else 1
